fixed spacing and alignment

--- a/frontend/web/src/app/dashboard/dashboard.component.css
+++ b/frontend/web/src/app/dashboard/dashboard.component.css
@@ -191,12 +191,14 @@ h4 {
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin-bottom: 32px;
 }
 
 .dashboard-header-title {
   font-size: 25px;
   font-weight: 600;
   color: #333;
+  margin-bottom: 10px;
 }
 
 .dashboard-header-caption {
@@ -208,7 +210,7 @@ h4 {
 /* Body styling */
 .dashboard-body {
   display: flex;
-  gap: 20px;
+  gap: 60px;
 }
 
 .dashboard-body-right-section {
@@ -227,6 +229,7 @@ h4 {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-bottom: 20px;
 }
 
 .dashboard-portfolio-header {
@@ -239,6 +242,7 @@ h4 {
   font-weight: 600;
   font-size: 15px;
   color: #333;
+  margin-bottom: 10px;
 }
 
 .dashboard-body-link {
@@ -268,6 +272,7 @@ h4 {
   gap: 15px;
   cursor: pointer;
   transition: background-color 0.3s;
+  border: 2px solid rgb(65, 81, 96);
 }
 
 .dashboard-portfolio-card:hover {
@@ -487,4 +492,5 @@ mat-cell {
   flex-direction: column;
   gap: 10px;
   width: 65%;
+  margin-top: -44px;
 }
